update: spacing issues

--- a/app/src/scss/partials/_layout.scss
+++ b/app/src/scss/partials/_layout.scss
@@ -19,6 +19,10 @@ footer {
 	padding-bottom: $unit * 7;
 }
 
+main {
+	padding-bottom: 0;
+}
+
 .container {
 	max-width: 600px;
 	margin: 0 auto;
